--- a/app/src/main/res/layout/fragment_recipe_details.xml
+++ b/app/src/main/res/layout/fragment_recipe_details.xml
@@ -83,7 +83,7 @@
             android:layout_height="match_parent">
 
             <View
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:background="@color/colorPrimary"
                 app:layout_constraintBottom_toBottomOf="@id/textview_recipe_details_steps_label"
