--- a/app/src/main/res/layout/recipe_recycler_view_item.xml
+++ b/app/src/main/res/layout/recipe_recycler_view_item.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:scaleType="centerCrop"
             android:adjustViewBounds="true"
-            android:src="@android:drawable/ic_menu_help"
+            android:src="@drawable/recipe"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -46,6 +46,28 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Recipe Name" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@color/colorTranslucentPrimary"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/textview_recipe_servings"
+            app:layout_constraintStart_toStartOf="@id/textview_recipe_servings"
+            app:layout_constraintTop_toTopOf="@id/textview_recipe_servings" />
+
+
+        <TextView
+            android:id="@+id/textview_recipe_servings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:padding="8dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="8 Servings" />
 
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
