--- a/app/src/main/res/layout/recycler_view_recipe_steps_item.xml
+++ b/app/src/main/res/layout/recycler_view_recipe_steps_item.xml
@@ -19,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:layout_marginTop="16dp"
-        android:background="#f2f2f2"
+        android:background="@color/colorRecyclerviewItemDivider"
         app:layout_constraintTop_toBottomOf="@id/textview_recipe_steps_step_name" />
 
 </android.support.constraint.ConstraintLayout>
