--- a/app/src/main/res/layout/fragment_step_details.xml
+++ b/app/src/main/res/layout/fragment_step_details.xml
@@ -61,6 +61,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
+            android:paddingBottom="8dp"
             app:layout_constraintTop_toBottomOf="@id/textview_step_short_description"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
