--- a/app/src/main/res/layout/fragment_step_details.xml
+++ b/app/src/main/res/layout/fragment_step_details.xml
@@ -22,6 +22,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
+        <ImageView
+            android:id="@+id/imageview_thumbnail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:visibility="gone"
+            android:contentDescription="Thumbnail" />
+
         <ProgressBar
             android:id="@+id/progressbar_video_loading"
             android:layout_width="wrap_content"
@@ -31,15 +41,6 @@
             app:layout_constraintEnd_toEndOf="@id/exoplayer_step_video"
             app:layout_constraintStart_toStartOf="@id/exoplayer_step_video"
             android:visibility="gone"/>
-
-      <!--  <View
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:background="@color/colorPrimary"
-            app:layout_constraintBottom_toBottomOf="@id/textview_step_short_description"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/textview_step_short_description" />-->
 
         <TextView
             android:id="@+id/textview_step_short_description"
